# plasma5-wallpapers-dynamic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  metadata.json.solar.sample  metadata.json.timed.sample
cmake/Modules/: Findlibexif.cmake  Findlibheif.cmake
data/: CMakeLists.txt
data/Dynamic/: metadata.desktop
data/Dynamic Numbers/: metadata.desktop  metadata.desktop.license
data/Dynamic Numbers/contents/images/: dynamic.heic
data/Dynamic/contents/images/: dynamic.avif  dynamic.avif.license
data/default/: metadata.json
package/: metadata.desktop
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml  utils.js
src/: CMakeLists.txt  Messages.sh
src/declarative/: CMakeLists.txt  ClockSkewNotifier.cc  ClockSkewNotifier.h  ClockSkewNotifierEngine.cc  ClockSkewNotifierEngine.h  ClockSkewNotifierEngine_linux.cc  ClockSkewNotifierEngine_linux.h  DynamicWallpaper.cc  DynamicWallpaper.h  DynamicWallpaperInstaller.cc  DynamicWallpaperInstaller.h  DynamicWallpaperModel.cc  DynamicWallpaperModel.h  DynamicWallpaperPackage.cc  DynamicWallpaperPackage.h  SunPath.cc  SunPath.h  SunPosition.cc  WallpapersModel.cc  WallpapersModel.h  clockskewnotifier.cpp  clockskewnotifierengine.cpp  clockskewnotifierengine.h  clockskewnotifierengine_linux.cpp  clockskewnotifierengine_linux.h  config-dynamicwallpaper.h.cmake  dynamicwallpaper.cpp  dynamicwallpaper.h  dynamicwallpapercrawler.cpp  dynamicwallpapercrawler.h  dynamicwallpaperdescription.cpp  dynamicwallpaperdescription.h  dynamicwallpaperengine.cpp  dynamicwallpaperengine.h  dynamicwallpaperengine_daynight.cpp  dynamicwallpaperengine_daynight.h  dynamicwallpaperengine_solar.cpp  dynamicwallpaperengine_solar.h  dynamicwallpaperengine_timed.cpp  dynamicwallpaperengine_timed.h  (+30 more)
src/kpackage-integration/: CMakeLists.txt  DynamicWallpaperPackageStructure.cc  DynamicWallpaperPackageStructure.h
src/lib/: CMakeLists.txt  KDynamicWallpaperConfig.cmake.in  kdaynightdynamicwallpapermetadata.cpp  kdaynightdynamicwallpapermetadata.h  kdynamicwallpapermetadata.cpp  kdynamicwallpapermetadata.h  kdynamicwallpaperreader.cpp  kdynamicwallpaperreader.h  kdynamicwallpaperwriter.cpp  kdynamicwallpaperwriter.h  ksolardynamicwallpapermetadata.cpp  ksolardynamicwallpapermetadata.h  ksunpath.cpp  ksunpath.h  ksunposition.cpp  ksunposition.h  ksystemclockmonitor.cpp  ksystemclockmonitor.h  ksystemclockmonitorengine.cpp  ksystemclockmonitorengine_linux.cpp  ksystemclockmonitorengine_linux_p.h  ksystemclockmonitorengine_p.h  metadata.xml  resources.qrc
src/package/: metadata.desktop  metadata.json
src/package/contents/config/: main.xml
src/package/contents/ui/: DecimalSpinBox.qml  WallpaperImage.qml  WallpaperView.qml  config.qml  main.qml
src/plugin/: CMakeLists.txt  ClockSkewNotifier.cc  ClockSkewNotifier.h  ClockSkewNotifierEngine.cc  ClockSkewNotifierEngine.h  ClockSkewNotifierEngine_linux.cc  ClockSkewNotifierEngine_linux.h  ClockSkewWatcher.cc  ClockSkewWatcher.h  ClockSkewWatcher_linux.cc  ClockSkewWatcher_linux.h  DateTimeWatcher.cc  DateTimeWatcher.h  DateTimeWatcher_linux.cc  DateTimeWatcher_linux.h  DynamicWallpaper.cc  DynamicWallpaper.h  DynamicWallpaperData.cc  DynamicWallpaperData.h  DynamicWallpaperInstaller.cc  DynamicWallpaperInstaller.h  DynamicWallpaperModel.cc  DynamicWallpaperModel.h  DynamicWallpaperPackage.cc  DynamicWallpaperPackage.h  PlatformClockSkewWatcher.cc  PlatformClockSkewWatcher.h  PlatformDateTimeWatcher.cc  PlatformDateTimeWatcher.h  SunPath.cc  SunPath.h  SunPosition.cc  SunPosition.h  WallpapersModel.cc  WallpapersModel.h  plugin.cc  plugin.h  qmldir  utils.cc  utils.h
src/plugins/: CMakeLists.txt
src/plugins/kpackage-integration/: CMakeLists.txt  dynamicwallpaperpackagestructure.cpp  dynamicwallpaperpackagestructure.h  dynamicwallpaperpackagestructure.json
src/plugins/packagestructure/: CMakeLists.txt  dynamicwallpaperpackagestructure.cpp  dynamicwallpaperpackagestructure.h  dynamicwallpaperpackagestructure.json
src/tools/: CMakeLists.txt
src/tools/builder/: CMakeLists.txt  README.md  dynamicwallpaperdescription.cpp  dynamicwallpaperdescription.h  dynamicwallpaperdescriptionreader.cpp  dynamicwallpaperdescriptionreader.h  dynamicwallpaperexifmetadata.cpp  dynamicwallpaperexifmetadata.h  dynamicwallpapermanifest.cpp  dynamicwallpapermanifest.h  main.cpp
src/tools/builder/completions/: CMakeLists.txt
src/tools/builder/completions/bash/: CMakeLists.txt  kdynamicwallpaperbuilder
src/tools/builder/completions/fish/: CMakeLists.txt  kdynamicwallpaperbuilder.fish
src/tools/builder/completions/zsh/: CMakeLists.txt  _kdynamicwallpaperbuilder
src/translations/: CMakeLists.txt  extract-messages.sh
src/translations/po/: de.po  fr.po  it-IT.po  it.po  nl_NL.po  pl.po  plasma_wallpaper_com.github.zzag.dynamic.pot  pt.po  ru.po  template.pot  uk.po  zh.po
tests/: CMakeLists.txt
tests/sunpath/: CMakeLists.txt  sunpathtest.cc  sunpathtest.cpp
tests/sunposition/: CMakeLists.txt  sunpositiontest.cc  sunpositiontest.cpp
